Update Using Python with Excel -  Reports.ipynb

--- a/Using Python with Excel -  Reports.ipynb
+++ b/Using Python with Excel -  Reports.ipynb
@@ -666,7 +666,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src = 'screenshots\\chart.PNG'>"
+    "<img src =\'screenshots/chart.PNG\'>"    
+
    ]
   }
  ],
